# Hackathon_EuroTech

./: .env.example  .gitignore  CLAUDE.md  HONESTY.md  LICENSE  README.md  build_data.py  build_neighbourhoods.py  build_population_history.py  hk_planning_pitch_video_guide.md  main.py  netlify.toml  pyproject.toml  weights_ahp.py
.claude/: launch.json
backend/: data_setup.py
backend/llm/: __init__.py  app.py  chat.py  client.py  data.py  forecast.py  history.py  panel.py  predict.py  prompts.py  schemas.py  social.py
backend/visualization/: __init__.py  buildings.py  cli.py  layers.py  mesh_builder.py  terrain_loader.py  viewer.py
docs/: MASTER_BUILD_DOC.md  city-health-management-plan.md
frontend/: .env.example  .gitignore  README.md  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/public/: adjacency.json  districts.geojson  neighbourhoods.geojson
frontend/src/: App.tsx  index.css  main.tsx  scenarios.ts  types.ts  vite-env.d.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: AssistantPanel.tsx  CesiumMap.tsx  ChatPanel.tsx  DetailEmptyState.tsx  DetailPanel.tsx  ForecastPanel.tsx  GoalInput.tsx  HamburgerMenu.tsx  Icons.tsx  IntroOverlay.tsx  LanguageSelector.tsx  LanguageToggle.tsx  LayersPanel.tsx  MapLegend.tsx  MapView.tsx  MyLocationButton.tsx  RiskBar.tsx  ScenarioPanel.tsx  SearchPanel.tsx  Sidebar.tsx  StatusBadge.tsx  StylingPanel.tsx
frontend/src/context/: BuildingContext.tsx  I18nContext.tsx  (+1 more)
scripts/: build_adjacency.py  gen_districts_geojson.py
(+10 files in other folders)
