[project]
name = "hackathon-eurotech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "anthropic>=0.107.0",
    "fastapi>=0.136.3",
    "fiona>=1.10.1",
    "numpy>=2.4.6",
    "pyproj>=3.7.2",
    "pyqt5>=5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyvista>=0.48.4",
    "pyvistaqt>=0.11.4",
    "rasterio>=1.5.0",
    "shapely>=2.1.2",
    "uvicorn[standard]>=0.49.0",
]
