[project]
name = "hackathon-eurotech"
version = "0.1.0"
description = "Interactive Smart City planning map for Hong Kong's 18 districts — EuroTech × HKTE Hackathon 2025"
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "fiona>=1.9.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pyproj>=3.6.0",
    "python-dotenv>=1.0.0",
    "rasterio>=1.3.0",
    "shapely>=2.0.0",
    "tabpfn>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]
